cabal-version:      3.0
name:               commonmark-initial
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite commonmark-initial-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        commonmark-initial
