cabal-version:      3.0
name:               commonmark-initial
version:            0.1.0.0
synopsis:           An initial encoding of the CommonMark language
description:
  This library provides an initial encoding of the CommonMark language
  for use with the [commonmark](https://hackage.haskell.org/package/commonmark)
  library.
license:            ISC
license-file:       LICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
homepage:           https://github.com/henrytill/commonmark-initial
copyright:          Copyright (c) 2025, Henry Till
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        ghc ==9.4.8 || ==9.6.7

source-repository head
  type: git
  location: https://github.com/henrytill/commonmark-initial.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Commonmark.Initial
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:
        base >=4.17.2.1 && <4.19,
        commonmark ^>=0.2.6.1,
        deriving-compat ^>=0.6.7,
        free ^>=5.2,
        text ^>=2.0.2

test-suite commonmark-initial-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Commonmark.InitialTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.2.1 && <4.19,
        commonmark ^>=0.2.6.1,
        commonmark-extensions ^>=0.2.6,
        dwergaz ^>=0.3.1.0,
        parsec ^>=3.1.16.1,
        text ^>=2.0.2,
        commonmark-initial
